# study

code/noodle/: Makefile.am  configure.ac  makefile
code/noodle/conf/: noodle.conf
code/noodle/console/: Makefile.am  console.cpp
code/noodle/doc/: Noodle-Engine.doc  Noodle-Engine.odt
code/noodle/include/: auto_proxy_table.hpp  config_manager.hpp  core.hpp  engine.hpp  error_string.hpp  global_object_manager.hpp  instance.hpp  log.hpp  memory_pool.hpp  message.hpp  message_queue.hpp  message_queue_base.hpp  message_source_manager.hpp  module.hpp  module_manager.hpp  ne.hpp  ne_impl.hpp  noodle.hpp  observer.hpp  os_misc.hpp  plugin.hpp  plugin_processor.hpp  plugin_source.hpp  proxy.hpp  proxy_manager.hpp  read_write_lock.hpp  script.hpp  script_object.hpp  service_manager.hpp  subject.hpp  version.hpp
code/noodle/plugins/: Makefile.am
code/noodle/plugins/plugin_console/: Makefile.am  plugin_console.cpp  plugin_console.hpp  server.cpp  server.hpp  session.cpp  session.hpp
code/noodle/plugins/plugin_fastcgi/: Makefile.am  fastcgi_message.hpp  fcgi_stdio.c  fcgi_stdio.h  fcgiapp.c  fcgiapp.h  fcgios.h  os_unix.c  os_win32.c  plugin_fastcgi.cpp  plugin_fastcgi.hpp
code/noodle/plugins/plugin_logger/: plugin_logger.cpp  plugin_logger.hpp  plugin_logger_message.hpp
code/noodle/plugins/plugin_name_server/: plugin_name_server.hpp
code/noodle/plugins/plugin_proxy/: Makefile.am  plugin_proxy.cpp  plugin_proxy.hpp  proxy_stub_message.hpp
code/noodle/plugins/plugin_stub/: Makefile.am  plugin_stub.cpp  plugin_stub.hpp  server.cpp  (+3 more)
code/noodle/src/: Makefile.am  auto_proxy_table.cpp  config_manager.cpp  core.cpp  engine.cpp  error_string.cpp  global_object_manager.cpp  instance.cpp  log.cpp  main.cpp  memory_pool.cpp  message_source_manager.cpp  module.cpp  module.mk  module_manager.cpp  ne_impl.cpp  observer.cpp  os_misc.cpp  plugin_source.cpp  proxy_manager.cpp  script.cpp  script_detail.ipp  subject.cpp
code/noodle/test/: Makefile.am
code/noodle/win32_proj/: noodle.sln  noodle.vcproj
(+108 files in other folders)
