INCLUDES=-I../include
bin_PROGRAMS=ne
ne_SOURCES= \
	auto_proxy_table.cpp \
	config_manager.cpp \
	core.cpp \
	engine.cpp \
	error_string.cpp \
	global_object_manager.cpp \
	instance.cpp \
	log.cpp \
	main.cpp \
	Makefile.am \
	memory_pool.cpp \
	message_source_manager.cpp \
	module.cpp \
	module_manager.cpp \
	ne_impl.cpp \
	observer.cpp \
	os_misc.cpp \
	plugin_source.cpp \
	proxy_manager.cpp \
	script.cpp \
	script_detail.ipp \
	subject.cpp

ne_LDFLAGS=-lpthread -ldl -lboost_system -lboost_program_options -lboost_thread

